frontend/tests/cases/negative/hsup/pushZeroZero.gr
pushZeroZero : forall {a b : Type} . (a, b) [Zero] -> (a [Zero], b [Zero])
pushZeroZero [(x, y)] = ([x], [y]) 